# rust-base

./: .gitignore  Cargo.toml  Makefile.toml  README.md  rustfmt.toml
my-app/: Cargo.toml
my-app/src/: error.rs  main.rs
