[workspace]
resolver = "2"

package.authors = ["AD4MANTIS"]
package.version = "0.1.0"
package.edition = "2021"

members = ["my-app"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
enum_glob_use = "forbid"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[workspace.dependencies]
thiserror = "1"
color-eyre = { version = "0.6.2", default-features = false }
